# ollamapipe

./: README.md  loopback.py  main.py  pipe.py  pyproject.toml
games/: maze.py  pet.py
